--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Мой сайт</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой сайт с тёмной темой</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Это мой первый сайт на GitHub Pages.</p>
+    <header>
+        <h1>Добро пожаловать на мой сайт!</h1>
+    </header>
+    <main>
+        <p>Это пример сайта с тёмной темой.</p>
+        <button id="theme-toggle">Переключить тему</button>
+    </main>
 </body>
 </html>
