--- a/index.html
+++ b/index.html
@@ -3,16 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт с тёмной темой</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Чёрный сайт</title>
+    <style>
+        /* Общие стили для чёрной темы */
+        body {
+            background-color: #000000; /* Чёрный фон */
+            color: #ffffff; /* Белый текст */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #111111; /* Тёмный фон для шапки */
+            padding: 20px;
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        h1 {
+            color: #ffffff; /* Белый заголовок */
+        }
+
+        p {
+            color: #cccccc; /* Светло-серый текст */
+        }
+
+        a {
+            color: #1e90ff; /* Голубой цвет для ссылок */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            background-color: #111111; /* Тёмный фон для подвала */
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Добро пожаловать на мой сайт!</h1>
+        <h1>Добро пожаловать на мой чёрный сайт!</h1>
     </header>
     <main>
-        <p>Это пример сайта с тёмной темой.</p>
-        <button id="theme-toggle">Переключить тему</button>
+        <p>Это пример сайта с чёрной темой. Всё просто и стильно.</p>
+        <p>Здесь может быть ваш текст, изображения или что угодно.</p>
+        <p>Посетите <a href="#">эту ссылку</a> для примера.</p>
     </main>
+    <footer>
+        <p>&copy; 2023 Чёрный сайт</p>
+    </footer>
 </body>
 </html>
