--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Чёрный сайт</title>
     <style>
-        /* Общие стили для чёрной темы */
+       
         body {
-            background-color: #000000; /* Чёрный фон */
-            color: #ffffff; /* Белый текст */
+            background-color: #000000; 
+            color: #ffffff; 
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
