--- a/index.html
+++ b/index.html
@@ -1,67 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Чёрный сайт</title>
-    <style>
-       
-        body {
-            background-color: #000000; 
-            color: #ffffff; 
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #111111; /* Тёмный фон для шапки */
-            padding: 20px;
-            text-align: center;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h1 {
-            color: #ffffff; /* Белый заголовок */
-        }
-
-        p {
-            color: #cccccc; /* Светло-серый текст */
-        }
-
-        a {
-            color: #1e90ff; /* Голубой цвет для ссылок */
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            background-color: #111111; /* Тёмный фон для подвала */
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>ЧЛЕННННННННН</title>
 </head>
 <body>
-    <header>
-        <h1>Добро пожаловать на мой чёрный сайт!</h1>
-    </header>
-    <main>
-        <p>Это пример сайта с чёрной темой. Всё просто и стильно.</p>
-        <p>Здесь может быть ваш текст, изображения или что угодно.</p>
-        <p>Посетите <a href="#">эту ссылку</a> для примера.</p>
-    </main>
-    <footer>
-        <p>&copy; 2023 Чёрный сайт</p>
-    </footer>
+    <h1>Привет, член!</h1>
+    <p>Это мой первый член на GitHub Pages.</p>
 </body>
 </html>
