--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ЧЛЕННННННННН</title>
+    <title>ПВЁСОЙТЭ)</title>
 </head>
-<body>
-    <h1>Привет, член!</h1>
-    <p>Это мой первый член на GitHub Pages.</p>
+<body style="background-color: black">
+    <h1>1</h1>
+    <p>1</p>
 </body>
 </html>
