--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ПВЁСОЙТЭ)</title>
 </head>
 <body style="background-color: black">
-    <h1></h1>
-    <p style="font-family:Bahnschrift; color: red;>ОТВЁРТКА</p>
+    <h1>ОТВЁРТКА</h1>
+    <p style="font-family:Bahnschrift; color: red;></p>
 </body>
 </html>
