--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
-    <p style="font-family:Bahnschrift; color: red;></p>
+    <p style="font-family: Bahnschrift; color: red;">
+        ОТВЁРТКА
+        </p>
 </body>
 </html>
