--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
-    <p style="font-family: Bahnschrift; color: red;">
+    <p style="font-family: Bahnschrift; color: red; font-size: 20px;">
         ОТВЁРТКА
         </p>
 </body>
