--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
-    <p style="font-family: Bahnschrift; color: red; font-size: 100px;">
-        ОТВЁРТКА
+    <p style="font-family: Bahnschrift; color: red;">
+<p style="font-size: 36px;">ОТВЁРТКА
         </p>
 </body>
 </html>
