--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
     <p style="font-family: Bahnschrift; color: red;">
-<p style="font-size: 36px;">ОТВЁРТКА
-        </p>
+<p style="font-size: 36px;">ОТВЁРТКА </p>
 </body>
 </html>
