--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
-    <p style="font-family: Bahnschrift; color: red; style="font-size: 100px;">ОТВЁРТКА </p>
+    <p style="font-family: Bahnschrift; color: red; style="font-size: 100px;">
+        ОТВЁРТКА 
+    </p>
 </body>
 </html>
