--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style="background-color: black">
     <h1>ОТВЁРТКА</h1>
     <p style="font-family: Bahnschrift; color: red;font-size: 100px;text-align: center;">
-        ОТВЁРТКА 
+        ОТВЁРТКА ОНА ЗАБЕРЁТ ТЕБЯ НЕ РАЗГАДЫВАЙ ЛУЧШЕ УХОДИ
     </p>
 </body>
 </html>
