--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>ОТВЁРТКА</h1>
     <p style="font-family: Bahnschrift; color: red;font-size: 100px;text-align: center;">
         ОТВЁРТКА ОНА ЗАБЕРЁТ ТЕБЯ НЕ РАЗГАДЫВАЙ ЛУЧШЕ УХОДИ
+        <img src="Первый.png" width="500">
     </p>
 </body>
 </html>
