--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
     <title>ПВЁСОЙТЭ)</title>
+    <style>
+        body {
+background-image: url('задник.gif');
+background-size: cover;
+background-repeat: yes-repeat;
+background-position: center;
+        }
+    </style>
 </head>
-<body style="background-color: black">
-    <h1>ОТВЁРТКА</h1>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 100px;text-align: center;">
         ОТВЁРТКА ОНА ЗАБЕРЁТ ТЕБЯ НЕ РАЗГАДЫВАЙ ЛУЧШЕ УХОДИ
         <img src="Первый.png" width="600" style="position: relative; left: 650px; top: 100px;">
