--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ background-position: center;
     </style>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 100px;text-align: center;">
-        ОТВЁРТКА ОНА ЗАБЕРЁТ ТЕБЯ НЕ РАЗГАДЫВАЙ ЛУЧШЕ УХОДИ
         <img src="Первый.png" width="600" style="position: relative; left: 650px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -650px ; top: 100px;">
+<img src="Всем привет.jpg" widt="500" style="position: relative; left: 100px ; top: 100px;">
     </p>
 </body>
 </html>
