--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ background-position: center;
         <img src="Первый.png" width="600" style="position: relative; left: 650px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -650px ; top: 100px;">
 <img src="Всем привет.jpg" widt="500" style="position: relative; left: 0px ; top: -600px;">
+<img src="отвёрточка.gif" width="500" style="position: relative; left: 10px ; top: 600px">
     </p>
 </body>
 </html>
