--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-position: center;
     <p style="font-family: Comic Sans Ms; color: red;font-size: 100px;text-align: center;">
         <img src="Первый.png" width="600" style="position: relative; left: 650px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -650px ; top: 100px;">
-<img src="Всем привет.jpg" widt="500" style="position: relative; left: 0px ; top: -600px;">
+<img src="Всем привет.jpg" width="500" style="position: relative; left: 0px ; top: -700px;">
 <img src="отвёрточка.gif" width="500" style="position: relative; left: 10px ; top: 600px">
     </p>
 </body>
