--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background-position: center;
         <img src="Первый.png" width="600" style="position: relative; left: 1200px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -700px ; top: 100px;">
         <img src="Всем привет.jpg" width="500" style="position: relative; left: -700px ; top: -400px;">
-        <img src="Всем отвёрточка.gif" width="500" style="position: relative; left: 0px ; top: 0px;">
+        <img src="отвёрточка.gif" width="500" style="position: relative; left: 0px ; top: 0px;">
     </p>
 </body>
 </html>
