--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html>
 <head>
     <title>ПВЁСОЙТЭ)</title>
-    <style>
-        body {
-background-image: url('задник.gif');
-background-size: cover;
-background-repeat: yes-repeat;
-background-position: center;
-        }
-    </style>
+    <body style="background-color: black;">
+    </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 100px;text-align: center;">
         <img src="Первый.png" width="600" style="position: relative; left: 1200px; top: 100px;">
