--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ввод текста</title>
+    <style>
+        .moved-input{
+     position: relative;
+    left: 100px;
+    top: 50px;
+        }
+    </style>
 <body>
     <h1>Связаться</h1>
     <input type="text" id="userInput" placeholder="Связаться">
