--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ввод текста</title>
+    <title>КРЕНДИ</title>
+<body>
+    <h1>Связаться</h1>
+    <input type="text" id="userInput" placeholder="Связаться">
+    <button onclick="checkInput()">Помолиться</button>
+    <p id="message"></p> <!-- Здесь появится сообщение -->
     <style>
         .moved-input{
      position: relative;
@@ -11,12 +16,6 @@
     top: 50px;
         }
     </style>
-<body>
-    <h1>Связаться</h1>
-    <input type="text" id="userInput" placeholder="Связаться">
-    <button onclick="checkInput()">Помолиться</button>
-    <p id="message"></p> <!-- Здесь появится сообщение -->
-
     <script>
         function checkInput() {
             // Получаем введённый текст
@@ -37,7 +36,6 @@
     </script>
 </body>
 </html>
-    <title>ПВЁСОЙТЭ)</title>
     <body style="background-color: black;">
     </body>
 </head>
