--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <head>
 <body>
     <h1>Введите текст</h1>
-    <input type="text" id="userInput" placeholder="Введите текст">
+    <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 100px; top: 50px;">
     <button onclick="checkInput()">Анализ</button>
+  <p id="message"></p>
     <script>
         function checkInput() {
             // Получаем введённый текст
