--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Введите текст</h1>
     <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 100px; top: 50px;">
-    <button onclick="checkInput()">Анализ</button>
+    <button style="position: relative; left: 100px; top: 50px;" onclick="checkInput()">Анализ</button>
   <p id="message"></p>
     <script>
         function checkInput() {
