--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Введите текст</h1>
     <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 100px; top: 50px;">
     <button style="position: relative; left: 100px; top: 50px;" onclick="checkInput()">Анализ</button>
-  <p id="message"></p>
+  <p  style="position: relative; left: 100px; top: 50px;" id="message"></p>
     <script>
         function checkInput() {
             // Получаем введённый текст
