--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 100px;text-align: center;">
+      Привет! Поговори со мной
         <img src="Первый.png" width="600" style="position: relative; left: 1200px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -700px ; top: 100px;">
         <img src="Всем привет.jpg" width="500" style="position: relative; left: -680px ; top: -400px;">
