--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body style="background-color: black;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px; style="position: relative; left: 100px; top: 50px;">
+    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;>
       Привет! Поговори со мной
         <img src="Первый.png" width="600" style="position: relative; left: 1200px; top: 100px;">
         <img src="Второй.png" width="600" style="position: relative; left: -700px ; top: 100px;">
