--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;>
       Привет! Поговори со мной
         <img src="Первый.png" width="600" style="position: relative; left: 1200px; top: 100px;">
-        <img src="Второй.png" width="600" style="position: relative; left: -700px ; top: 100px;">
-        <img src="Всем привет.jpg" width="500" style="position: relative; left: -680px ; top: -400px;">
-        <img src="отвёрточка.gif" width="500" style="position: relative; left: 360px ; top: -390px;">
-        <img src="Секретик.png" width="700" style="position: relative; left: 300px ; top: 1500px;">
+        <img src="Второй.png" width="600" style="position: relative; left: 1px ; top: 1px;">
+        <img src="Всем привет.jpg" width="500" style="position: relative; left: 0x ; top: 0px;">
+        <img src="отвёрточка.gif" width="500" style="position: relative; left: 2px ; top: 2px;">
+        <img src="Секретик.png" width="700" style="position: relative; left: 3px ; top: 3px;">
     </p>
 </body>
 </html>
