--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
     <body style="background-color: black;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;>
-      Привет! Поговори со мной
-        <img src="Первый.png" width="600" style="position: relative; left: 4px ; top: 1px;">
-        <img src="Второй.png" width="600" style="position: relative; left: 1px ; top: 1px;">
+    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;></p>
+
+        <img src="Второй.png" 
         <img src="Всем привет.jpg" width="500" style="position: relative; left: 0x ; top: 0px;">
         <img src="отвёрточка.gif" width="500" style="position: relative; left: 2px ; top: 2px;">
         <img src="Секретик.png" width="700" style="position: relative; left: 3px ; top: 3px;">
+        <img src="Первый.png" width="700" style="position: relative; left : 4px ; tp: 4px;">
+        <img src="Второй.png" width="600" style="position: relative; left: 1px ; top: 1px;">
     </p>
 </body>
 </html>
