--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;></p>
 
         <img src="Второй.png" 
-        <img src="Всем привет.jpg" width="500" style="position: relative; left: 5x ; top: 5px;">
+        <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
         <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
         <img src="Секретик.png" width="700" style="position: relative; left: 400px ; top: 2000px;">
         <img src="Первый.png" width="700" style="position: relative; left : 4px ; top: -500px;">
-        <img src="Второй.png" width="600" style="position: relative; left: 1000px ; top: 1px;">
+        <img src="Второй.png" width="700" style="position: relative; left: -4px ; top: 500px;">
     </p>
 </body>
 </html>
