--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;></p>
+      Напиши мне)
 
         <img src="Второй.png" 
         <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
