--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <body style="background-color: black;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px;></p>
+    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px; style="position: relative; left: 100px; top: 600px;">
       Напиши мне)
-
+    </p>
         <img src="Второй.png" 
         <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
         <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
