--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
 <body>
     <h1>Введите текст</h1>
-    <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 800px; top: 700px;">
-    <button style="position: relative; left: 800px; top: 700px;" onclick="checkInput()">Анализ</button>
-  <p  style="position: relative; left: 800px; top: 700px;" id="message"></p>
+    <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 800px; top: 750px;">
+    <button style="position: relative; left: 800px; top: 750px;" onclick="checkInput()">Анализ</button>
+  <p  style="position: relative; left: 800px; top: 750px;" id="message"></p>
     <script>
         function checkInput() {
             // Получаем введённый текст
@@ -31,7 +31,7 @@
     <body style="background-color: black;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px; style="position: relative; left: 100px; top: 600px;">
+    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px ;style= position: relative; left: 100px; top: 600px;">
       Напиши мне)
     </p>
         <img src="Второй.png" 
