--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
     <body style="background-color: black;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px ;style= position: relative; left: 100px; top:1000px;">
-      Напиши мне)
+    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
     </p>
         <img src="Второй.png" 
         <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
         <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
-        <img src="Секретик.png" width="700" style="position: relative; left: 80px ; top: 2000px;">
+        <img src="Секретик.png" width="700" style="position: relative; left: 0px ; top: 2000px;">
         <img src="Первый.png" width="700" style="position: relative; left : 4px ; top: -500px;">
         <img src="Второй.png" width="600" style="position: relative; left: 600px ; top: -500px;">
     </p>
