--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <body>
     <h1>Введите текст</h1>
-    <input type="text" id="userInput" placeholder="Введите текст" style="position: relative; left: 800px; top: 750px;">
+    <input type="text" id="userInput" placeholder="Напиши мне)" style="position: relative; left: 800px; top: 750px;">
     <button style="position: relative; left: 800px; top: 750px;" onclick="checkInput()">Анализ</button>
   <p  style="position: relative; left: 800px; top: 750px;" id="message"></p>
     <script>
@@ -18,8 +18,8 @@
             const messageElement = document.getElementById('message');
 
             // Проверяем введённый текст
-            if (userInput === "секрет") {
-                messageElement.textContent = "Правильно! Вы ввели секретное слово.";
+            if (userInput === ""Убийца"/ "Кто убийца"/ "Убийца Родиона"") {
+                messageElement.textContent = "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf";
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
                 messageElement.textContent = "Неправильно. Попробуйте ещё раз.";
