--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             const messageElement = document.getElementById('message');
 
             // Проверяем введённый текст
-            if (userInput === "Убийца"/ "Кто убийца"/ "Убийца Родиона") {
+            if (userInput === "Убийца") {
                 messageElement.textContent = "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf";
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
