--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             const messageElement = document.getElementById('message');
 
             // Проверяем введённый текст
-            if (userInput === "Убийца") {
+            if (userInput === "убийца") {
                 messageElement.textContent = "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf";
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
-                messageElement.textContent = "Неправильно. Попробуйте ещё раз.";
+                messageElement.textContent = "Попробуйте ещё раз.";
                 messageElement.style.color = "red"; // Меняем цвет текста
             }
         }
