--- a/index.html
+++ b/index.html
@@ -13,15 +13,122 @@
        // Объект с фразами и сообщениями
         const phrases = {
             "привет": "Привет! Как дела?",
-            "пока": "До свидания! Удачи!",
-            "секрет": "Вы нашли секретное слово!",
-            "как дела": "У меня всё отлично, спасибо!",
-            "что нового": "Ничего особенного, а у вас?",
-            "как тебя зовут": "Меня зовут Бот!",
-            "сколько времени": "Сейчас " + new Date().toLocaleTimeString(),
-            "спасибо": "Пожалуйста! Обращайтесь!",
-            "погода": "Сегодня солнечно и тепло!",
-            "любимый цвет": "Мой любимый цвет — синий!"
+          "Убийца"/ "Кто убийца"/ "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+
+
+"Автор пидор":
+Запрос гугл "Как научиться шутить"
+
+"КРЕНДИ" "Скибиди":
+Играют скибиди толчки
+
+"Борат":
+Кто?
+
+"Эм"/"Эмануэль Кайседо":
+"Дождь"
+
+"Хонас Васкез":
+"Привет, дружище!"
+
+"Михаил Бахтеев"/ "Какигод" "Каkigod":
+"Фу"
+
+"Как дела?":
+"Хорошо, а у тебя?"
+
+"Хорошо":
+"Это круто, но что это сзади тебя"
+
+"Ничего":
+"Обернись"
+
+"Бу":
+"Скример"
+
+"Квасд":
+"Клавиатурой ударился?"
+
+"Штайнер" /"Альберт Бабенберг":
+"Странно"
+
+"Руслан"/ "Райнер Гослинг":
+"..."
+
+"Эрик Вайс":
+Ссылка на one hour penis music loop
+
+"Казуити Сода":
+"Привет"
+
+"Да":
+"Пизда"
+
+"Нет":
+"Пидора ответ"
+
+"Шлюхи аргумент":
+"Хуй"
+
+"Бебич" "bebich123" "Финни Шарлот":
+"Шкебеде"
+
+"Resonance" "Резонанс" "Йохан Либерт":
+"Друг"
+
+"Билл Шифр":
+"Не люблю геометрию"
+
+"Гравити Фоллз":
+"Не выйдет"
+
+"Пароль123"/ "password123":
+"Разгадал, возьми пирожок с полки"
+
+"Эл"/ "Эллиот"/ "Игорь":
+"АААА ЗАГОВОРЫ"
+
+"Сквозь Звезды":
+"Хуйня"
+
+"Генри Гиммер"/ "Гидро":
+"Ненавижу цвет фона"
+
+"Войцех Градецкий" "Войцех":
+"1.."
+
+"Лаура Коннорз" "Лаура":
+"Смерть"
+
+"Джейс Стоун" "Джейс":
+"Проблемы?"
+
+"Энди Маск" "Энди":
+"Ты дебил?"
+
+"Шеррил Маск" "Шеррил":
+"Не помню такую"
+
+"Мэй" "Мэй Гонзалез":
+"Yes, honey"
+
+"Женя"/ "Максимилиан Фостер":
+"Йоу"
+ "Отвёртка" "Отвертка":
+"Лучший инструмент"
+
+"Зуб":
+"Улика"
+
+"Крушение":
+"О как"
+
+"Кайрос":
+"Дом" (изменено)
+
+
+
+          
         };
 
         function checkInput() {
@@ -36,7 +143,7 @@
                 messageElement.textContent = phrases[userInput]; // Выводим сообщение
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
-                messageElement.textContent = "Я не понимаю эту фразу. Попробуйте ещё раз.";
+                messageElement.textContent = "Хуйня, Переписывай.";
                 messageElement.style.color = "red";
             }
         }
