--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        // Объект с фразами и сообщениями
         const phrases = {
             "привет": "Привет! Как дела?",
-          "Убийца"/ "Кто убийца"/ "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+          "Убийца","Кто убийца","Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
 
 
 "Автор пидор":
