--- a/index.html
+++ b/index.html
@@ -12,123 +12,9 @@
     <script>
        // Объект с фразами и сообщениями
         const phrases = {
-            "привет": "Привет! Как дела?",
-          "Убийца","Кто убийца","Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
-
-
-"Автор пидор":
-Запрос гугл "Как научиться шутить"
-
-"КРЕНДИ" "Скибиди":
-Играют скибиди толчки
-
-"Борат":
-Кто?
-
-"Эм"/"Эмануэль Кайседо":
-"Дождь"
-
-"Хонас Васкез":
-"Привет, дружище!"
-
-"Михаил Бахтеев"/ "Какигод" "Каkigod":
-"Фу"
-
-"Как дела?":
-"Хорошо, а у тебя?"
-
-"Хорошо":
-"Это круто, но что это сзади тебя"
-
-"Ничего":
-"Обернись"
-
-"Бу":
-"Скример"
-
-"Квасд":
-"Клавиатурой ударился?"
-
-"Штайнер" /"Альберт Бабенберг":
-"Странно"
-
-"Руслан"/ "Райнер Гослинг":
-"..."
-
-"Эрик Вайс":
-Ссылка на one hour penis music loop
-
-"Казуити Сода":
-"Привет"
-
-"Да":
-"Пизда"
-
-"Нет":
-"Пидора ответ"
-
-"Шлюхи аргумент":
-"Хуй"
-
-"Бебич" "bebich123" "Финни Шарлот":
-"Шкебеде"
-
-"Resonance" "Резонанс" "Йохан Либерт":
-"Друг"
-
-"Билл Шифр":
-"Не люблю геометрию"
-
-"Гравити Фоллз":
-"Не выйдет"
-
-"Пароль123"/ "password123":
-"Разгадал, возьми пирожок с полки"
-
-"Эл"/ "Эллиот"/ "Игорь":
-"АААА ЗАГОВОРЫ"
-
-"Сквозь Звезды":
-"Хуйня"
-
-"Генри Гиммер"/ "Гидро":
-"Ненавижу цвет фона"
-
-"Войцех Градецкий" "Войцех":
-"1.."
-
-"Лаура Коннорз" "Лаура":
-"Смерть"
-
-"Джейс Стоун" "Джейс":
-"Проблемы?"
-
-"Энди Маск" "Энди":
-"Ты дебил?"
-
-"Шеррил Маск" "Шеррил":
-"Не помню такую"
-
-"Мэй" "Мэй Гонзалез":
-"Yes, honey"
-
-"Женя"/ "Максимилиан Фостер":
-"Йоу"
- "Отвёртка" "Отвертка":
-"Лучший инструмент"
-
-"Зуб":
-"Улика"
-
-"Крушение":
-"О как"
-
-"Кайрос":
-"Дом" (изменено)
-
-
-
-          
+"Кто убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf", 
+          "Убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+          "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
         };
 
         function checkInput() {
