--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         const phrases = {
 "Кто убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf", 
           "Убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
-          "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+          "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf
         };
 
         function checkInput() {
