--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <input type="text" id="userInput" placeholder="Напиши мне)" style="position: relative; left: 800px; top: 750px;">
     <button style="position: relative; left: 800px; top: 750px;" onclick="checkInput()">Анализ</button>
   <p style="position: relative; left: 800px; top: 750px;" id="message"></p>
-    <script>
-       // Объект с фразами и сообщениями
+   <script>
+        // Объект с фразами и сообщениями
         const phrases = {
-"Кто убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf", 
-          "Убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
-          "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf
+            "Убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+            "Кто убийца": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+            "Убийца Родиона": "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf",
+            "": "",
+            "": "",
+            "": "",
+            "": "",
+            "": "",
+            "": "",
+            "": ""
         };
 
         function checkInput() {
@@ -29,7 +36,7 @@
                 messageElement.textContent = phrases[userInput]; // Выводим сообщение
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
-                messageElement.textContent = "Хуйня, Переписывай.";
+                messageElement.textContent = "Я не понимаю эту фразу. Попробуйте ещё раз.";
                 messageElement.style.color = "red";
             }
         }
