--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
         // Массив с фразами и сообщениями
         const phrases = [
             { phrase: "Убийца", message: "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf" },
-            { phrase: "пока", message: "До свидания! Удачи!" },
-            { phrase: "секрет", message: "Вы нашли секретное слово!" },
-            { phrase: "как дела", message: "У меня всё отлично, спасибо!" },
-            { phrase: "что нового", message: "Ничего особенного, а у вас?" },
-            { phrase: "как тебя зовут", message: "Меня зовут Бот!" },
-            { phrase: "сколько времени", message: "Сейчас " + new Date().toLocaleTimeString() },
-            { phrase: "спасибо", message: "Пожалуйста! Обращайтесь!" },
-            { phrase: "погода", message: "Сегодня солнечно и тепло!" },
-            { phrase: "любимый цвет", message: "Мой любимый цвет — синий!" }
+            { phrase: "кто убийца", message: "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf" },
+            { phrase: "убийца родиона", message: "https://youtu.be/dQw4w9WgXcQ?si=PDH7uftigo4O9pyf" },
+            { phrase: "Автор Пидор", message: "https://surl.li/kgrgtg" },
+            { phrase: "Борат", message: "Кто?" },
+            { phrase: "Эм", message: "Дождь" },
+            { phrase: "Эмануэль Кайседо", message: "Дождь" },
+            { phrase: "Хонас Васкез", message: "Привет,Дружище!" },
+            { phrase: "Михаил Бахтеев", message: "Фу" },
+           { phrase: "Какигод", message: "Фу" },
+            { phrase: "Каkigod", message: "Фу" },
+            { phrase: "Как дела", message: "Хорошо, а у тебя?" },
+            { phrase: "Как дела?", message: "Хорошо, а у тебя?" },
+            { phrase: "Хорошо", message: "Это круто, но что это сзади тебя" },
+            { phrase: "Ничего", message: "Обернись" },
+            { phrase: "Бу", message: "ААААААААААААААААААААААААААААААААААААААААААА(скример)" }
         ];
 
         function checkInput() {
