--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 messageElement.textContent = foundPhrase.message; // Выводим сообщение
                 messageElement.style.color = "green"; // Меняем цвет текста
             } else {
-                messageElement.textContent = "Я не понимаю эту фразу. Попробуйте ещё раз.";
+                messageElement.textContent = "Хуйня, переписывай";
                 messageElement.style.color = "red";
             }
         }
