--- a/index.html
+++ b/index.html
@@ -26,6 +26,50 @@
             { phrase: "Как дела", message: "Хорошо, а у тебя?" },
             { phrase: "Как дела?", message: "Хорошо, а у тебя?" },
             { phrase: "Хорошо", message: "Это круто, но что это сзади тебя" },
+          { phrase: "Квасд", message: "Клавиатурой ударился?" },
+            { phrase: "Штайнер", message: "Странно" },
+            { phrase: "Альберт Бабенберг", message: "Странно" },
+            { phrase: "Руслан", message: "..." },
+            { phrase: "Райнер Гослинг", message: "..." },
+           { phrase: "Эрик Вайс", message: "https://youtu.be/Ds14zhfHEvE?si=waKytiSgRa7kAJhW" },
+            { phrase: "Казуити Сода", message: "Привет!" },
+            { phrase: "Да", message: "Пизда" },
+            { phrase: "Нет", message: "Пидора ответ" },
+            { phrase: "Шлюхи аргумент", message: "Хуй" },
+            { phrase: "Бебич", message: "Шкебеде" },
+          { phrase: "bebich123", message: "Шкебеде" },
+            { phrase: "Финни Шарлот", message: "Шкебеде" },
+            { phrase: "Resonance", message: "Друг" },
+            { phrase: "Резонанс", message: "Друг" },
+            { phrase: "Йохан Либерт", message: "Друг" },
+           { phrase: "Билл Шифр", message: "Не люблю геометрию" },
+            { phrase: "Гравити Фоллз", message: "Не выйдет" },
+            { phrase: "Пароль123", message: "Разгадал, возьми пирожок с полки" },
+            { phrase: "password123", message: "Разгадал, возьми пирожок с полки" },
+            { phrase: "Эл", message: "АААА ЗАГОВОРЫ" },
+            { phrase: "Эллиот", message: "АААА ЗАГОВОРЫ" },
+          { phrase: "Игорь", message: "АААА ЗАГОВОРЫ" },
+            { phrase: "Сквозь Звезды", message: "Хуйня" },
+            { phrase: "Генри Гиммер", message: "Ненавижу цвет фона" },
+            { phrase: "Гидро", message: "Ненавижу цвет фона" },
+            { phrase: "Войцех Градецкий", message: "1" },
+           { phrase: "Войцех", message: "1" },
+            { phrase: "Лаура Коннорз", message: "Смерть" },
+            { phrase: "Лаура", message: "Смерть" },
+            { phrase: "Джейс Стоун", message: "Проблемы?" },
+            { phrase: "Джейс", message: "Проблемы?" },
+            { phrase: "Энди Маск", message: "Ты дебил?" },
+          { phrase: "Энди", message: "Ты дебил?" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+           { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
             { phrase: "Ничего", message: "Обернись" },
             { phrase: "Бу", message: "ААААААААААААААААААААААААААААААААААААААААААА(скример)" }
         ];
